tests/should_fail/match_struct_field_type_mismatch_str.nv
module fail
struct Point { x: Int, y: Int }
// String literal in Int field — type mismatch
let p = Point(1, 2)
let r = match p {
    Point { x: "hello", y } => "bad",
    _ => "ok",
}
